k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: legal-term-api
spec:
  # replicas: 2 # TODO: auto-scaling
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: legal-term-api
  template:
    metadata:
      labels:
        app: legal-term-api
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
      - name: legal-term-api
        image: trtestreg.azurecr.io/legal-term-api:latest
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
        resources:
          requests:
            memory: "100Mi"
            cpu: "20m"
          limits:
            memory: "250Mi"
            cpu: "200m"
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /terms
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /terms
            port: 8000
          initialDelaySeconds: 60
          periodSeconds: 30
